# NexusMind

./: .dockerignore  .env.example  .flake8  .gitignore  DEBUG_LOG_12a_CI_TRIGGER.md  Dockerfile  README.md  TROUBLESHOOTING_LOG.md  alembic.ini  api_test_client.py  create_test_brain.py  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  test.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c1a696167488_create_initial_tables.py
brains/: 10b5712b-b659-40d3-84fe-1499a2df46da.json  1a781d94-6f2a-4559-bfeb-ac55d9482c4e.json  1c24f0f3-8478-4ca9-80bd-06b61d3acf56.json  278ee17c-0a5e-40d5-9e69-d6c93d91aff3.json  34d3867c-cf82-4662-89b9-d68ba76a3470.json  3ceea4b3-b7f3-4001-8593-bbb0a7830062.json  47b4260e-f03a-48c0-9c5c-81e049957cf6.json  52398487-70f9-4e16-bf48-71b7efb69151.json  5ee46ac0-8fe5-408a-9975-cb327d4bc9ad.json  68022882-7b3e-4643-8db3-7e61a9c0df31.json  6a4338a0-4eb1-4c29-a47a-c4a85aaac8f7.json  7f973add-33f9-4083-a4d1-a7292edc8333.json  80eb99bb-d8b8-499b-bdf8-0a4dd20db040.json  8da45d0e-d3a6-402d-9f69-7b244e262e5e.json  ae7e221e-7c88-4c34-be4a-035863c17b0b.json  aecac716-1189-40c5-b216-fa129a1b7dc0.json  b09a6af8-166d-45c1-b234-4f7421fdf043.json  bcb74e3f-f283-472f-8299-701a9dd6805a.json  c2140ac2-2cdb-4687-bf2d-af041cb6388e.json  ce300a36-2a9b-4816-bb50-f813379e8ebb.json  e6d9bea2-cc4f-4158-860b-cccb050a1986.json  f441fe17-69ad-48ac-898b-9e7a63f56881.json
core/: README.md
core/file_processor/: main.py  models.py  parsers.py
core/nexusmind/: base_config.py  celery_app.py  config.py  database.py  logger.py  tasks.py
core/nexusmind/brain/: brain.py  serialization.py
core/nexusmind/files/: file.py
core/nexusmind/llm/: llm_endpoint.py
core/nexusmind/models/: files.py
core/nexusmind/processor/: processor_base.py  registry.py  splitter.py
core/nexusmind/rag/: nexus_rag.py
core/nexusmind/storage/: faiss_vector_store.py  (+3 more)
core/quivr_core/: config.py
frontend/: Dockerfile.prod  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
nginx/: Dockerfile  nginx.conf
scripts/: check_migrations.py  reset_dev_db.sh
src/nexusmind/: base_config.py  celery_app.py  config.py  database.py  logger.py  tasks.py
storage/: test_doc.txt  vector_store.index  vs_278ee17c-0a5e-40d5-9e69-d6c93d91aff3.json  vs_68022882-7b3e-4643-8db3-7e61a9c0df31.json  vs_7f973add-33f9-4083-a4d1-a7292edc8333.json  vs_8da45d0e-d3a6-402d-9f69-7b244e262e5e.json  vs_aecac716-1189-40c5-b216-fa129a1b7dc0.index  vs_aecac716-1189-40c5-b216-fa129a1b7dc0.json  vs_e6d9bea2-cc4f-4158-860b-cccb050a1986.json
tests/: conftest.py  test_api.py  test_brain.py  test_config.py  test_e2e_rag_with_llm.py  test_llm_endpoint.py  test_nexus_file.py  test_nexus_rag.py  test_storage.py  test_vector_store.py
tests/processor/: test_registry.py  test_simple_txt_processor.py
websocket_gateway/: Dockerfile  index.js  package-lock.json  package.json
(+23 files in other folders)
