[tool.poetry]
name = "nexusmind"
version = "0.1.0"
description = "NEXUSMIND - A RAG system development project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.0"
pydantic-settings = "^2.0"
litellm = "^1.15.0"
faiss-cpu = "^1.7.4"
numpy = "^1.26.0"
loguru = "^0.7.2"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
celery = {extras = ["redis"], version = "^5.5.3"}
redis = "^5.0.4"
sqlmodel = "^0.0.24"
boto3 = "^1.39.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
norecursedirs = ["postgres_data", "minio_data", "redis_data", ".venv", "storage"]
